# KW6_DjangoBasics

./: .env.sample  .gitignore  README.md  blog.json  email_newsletter.json  group.json  pyproject.toml  users.json
blog/: admin.py  models.py  urls.py  views.py
blog/templates/blog/: blog_detail.html
config/: settings.py  urls.py
email_newsletter/: admin.py  cron.py  forms.py  models.py  services.py  urls.py  views.py
email_newsletter/templates/email_newsletter/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  homepage.html  mailing_report.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  newsletter_confirm_delete.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html
email_newsletter/templates/email_newsletter/includes/: inc_main_menu.html
users/: forms.py  func.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/templates/users/: login.html  password_recovery.html  user_activation.html  user_form.html  user_list.html
